v0.6.6 (2011-xx-xx)
  * Add support for connecting to Redis using UNIX domain sockets (ISSUE #25).

  * ZUNIONSTORE and ZINTERSTORE can accept an array to specify a list of the 
    source keys to be used to populate the destination key.

v0.6.5 (2011-02-12)
  * FIX: due to an untested internal change introduced in v0.6.4, a wrong 
    handling of bulk reads of zero-length values was producing protocol 
    desynchronization errors (ISSUE #20).

v0.6.4 (2011-02-12)
  * Various performance improvements (15% ~ 25%) especially when dealing with 
    long multibulk replies or when using clustered connections.

  * Added the "on_retry" option to Predis\MultiExecBlock that can be used to 
    specify an external callback (or any callable object) that gets invoked 
    whenever a transaction is aborted by the server.

  * Added inline (p)subscribtion via options when initializing an instance of 
    Predis\PubSubContext.

v0.6.3 (2011-01-01)
  * New commands available in the Redis v2.2 profile (dev):
      - Strings: SETRANGE, GETRANGE, SETBIT, GETBIT
      - Lists  : BRPOPLPUSH

  * The abstraction for MULTI/EXEC transactions has been dramatically improved 
    by providing support for check-and-set (CAS) operations when using Redis >= 
    2.2. Aborted transactions can also be optionally replayed in automatic up 
    to a user-defined number of times, after which a Predis\AbortedMultiExec 
    exception is thrown.

v0.6.2 (2010-11-28)
  * Minor internal improvements and clean ups.

  * New commands available in the Redis v2.2 profile (dev):
      - Strings: STRLEN
      - Lists  : LINSERT, RPUSHX, LPUSHX
      - ZSets  : ZREVRANGEBYSCORE
      - Misc.  : PERSIST

  * WATCH also accepts a single array parameter with the keys that should be 
    monitored during a transaction.

  * Improved the behaviour of Predis\MultiExecBlock in certain corner cases.

  * Improved parameters checking for the SORT command.
